Maplike infrastructure ASSERT()s if the first operation is a delete of a existing values https://bugs.webkit.org/show_bug.cgi?id=230530

Reviewed by Youenn Fablet.

Source/WebCore:

The infrastructure deletes the value from the backing map before the JS map is initialized.
Then, when the infrastructure goes to delete it from the JS map, it isn't present. The
ASSERT() checks to see that it was deleted from the JS map iff it was deleted from the backing
map.

Test: js/dom/maplike.html

* bindings/js/JSDOMMapLike.h:
(WebCore::forwardDeleteToMapLike):

LayoutTests:

* js/dom/maplike.html:


Canonical link: https://commits.webkit.org/241937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282805 268f45cc-cd09-0410-ab3c-d52691b4dbfc